# semrec

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  config.cfg  package.xml
configs/: interactive-ros.cfg  interactive.cfg
data/arbitrary_mapping_files/: ros_signals.cfg
data/semantics_descriptor_files/: cram_knowrob_pickandplace.cfg
doc/: Doxyfile  designator_interface.html  missing_dependencies
doc/cram_plan_structures/: plans.html  style.css
doc/css/: style.css
include/: ArbitraryMappingsHolder.h  Beliefstate.h  BeliefstateROS.h  CExporter.h  CExporterFileoutput.h  Config.h  ForwardDeclarations.h  JSON.h  Node.h  Plugin.h  PluginInstance.h  PluginSystem.h  Property.h  SemanticHierarchyRecorder.h  SemanticHierarchyRecorderROS.h  Types.h  UtilityBase.h
include/plugins/console/: PluginConsole.h
include/plugins/dotexporter/: CExporterDot.h  PluginDOTExporter.h
include/plugins/experiment-context/: PluginExperimentContext.h
include/plugins/experiment-knowledge/: PluginExperimentKnowledge.h
include/plugins/gazebo/: PluginGazebo.h
include/plugins/imagecapturer/: CImageCapturer.h  PluginImageCapturer.h
include/plugins/interactive/: InteractiveObject.h  PluginInteractive.h
include/plugins/owlexporter/: CExporterOwl.h  OwlIndividual.h  PluginOWLExporter.h
include/plugins/plugin_ros/: PluginROS.h
include/plugins/prediction/: DecisionTree.h  PluginPrediction.h
include/plugins/ros/: PluginROS.h
include/plugins/supervisor/: PluginSupervisor.h
include/plugins/symboliclog/: PluginSymbolicLog.h
include/semrec/: ArbitraryMappingsHolder.h  CExporter.h  CExporterFileoutput.h  Config.h  ForwardDeclarations.h  JSON.h  Plugin.h  PluginInstance.h  PluginSystem.h  SemanticHierarchyRecorder.h  SemanticHierarchyRecorderROS.h  Types.h  UtilityBase.h
include/semrec/plugins/console/: PluginConsole.h
include/semrec/plugins/dotexporter/: CExporterDot.h  PluginDOTExporter.h
include/semrec/plugins/experiment-context/: PluginExperimentContext.h
include/semrec/plugins/gazebo/: PluginGazebo.h
include/semrec/plugins/imagecapturer/: CImageCapturer.h  PluginImageCapturer.h
include/semrec/plugins/interactive/: InteractiveObject.h  PluginInteractive.h
include/semrec/plugins/owlexporter/: CExporterOwl.h  OwlIndividual.h  PluginOWLExporter.h
include/semrec/plugins/prediction/: DecisionTree.h  PluginPrediction.h
include/semrec/plugins/ros/: PluginROS.h
include/semrec/plugins/supervisor/: PluginSupervisor.h
include/semrec/plugins/symboliclog/: PluginSymbolicLog.h
scripts/: consistency-check.py  cp_good_logs.sh  makedot.sh  makedots.sh  package.sh
scripts/bstools/Beliefstate Tools/: .gitignore  DataCondenser.py  DataExtractor.py  DataKCondenser.py  DesignatorReader.py  GraspExtractor.py  Log.py  LogAnalyzer.py  LogReader.py  OwlReader.py  TimeConfidence.py  analyzelog.py  check.py  check_failures.py  condense.py  create_condensed_model.py  create_training_data.py  create_training_data_new.py  ds_length.py  exploration_details.py  extract_data.py  extract_grasps.py  failures.csv  failures.plt  failures2.csv  failures2.plt  kcondense.py  makeDTree.sh  makeDot.py  makemodels.sh  packageAndCreate.sh  runweka.sh  runweka_d.sh  timec.py  wekaToDTree.py
scripts/bstools/Beliefstate Tools/ExperienceProcessor/: test.py
scripts/bstools/Beliefstate Tools/ExperienceProcessor/expproc/: ExperienceProcessor.py  Processor.ui  Visualization_ui.py
scripts/bstools/Beliefstate Tools/ExperienceProcessor/memorycondenser/: .gitignore  create_all.sh  dot.sh  memorycondenser.py  run.sh
scripts/bstools/Beliefstate Tools/ExperienceProcessor/memorycondenser/memorycondenser/: Log.py  MemoryCondenser.py  OwlReader.py
src/: ArbitraryMappingsHolder.cpp  Beliefstate.cpp  BeliefstateROS.cpp  CExporter.cpp  CExporterFileoutput.cpp  GlobalFunctions.cpp  JSON.cpp  Node.cpp  Plugin.cpp  PluginInstance.cpp  PluginSystem.cpp  Property.cpp  SemanticHierarchyRecorder.cpp  SemanticHierarchyRecorderROS.cpp  UtilityBase.cpp  main.cpp
src/plugins/console/: PluginConsole.cpp
src/plugins/dotexporter/: CExporterDot.cpp  PluginDOTExporter.cpp
src/plugins/experiment-context/: PluginExperimentContext.cpp
src/plugins/experiment-knowledge/: PluginExperimentKnowledge.cpp
src/plugins/gazebo/: PluginGazebo.cpp
src/plugins/imagecapturer/: CImageCapturer.cpp  PluginImageCapturer.cpp
src/plugins/interactive/: InteractiveObject.cpp  PluginInteractive.cpp
src/plugins/owlexporter/: CExporterOwl.cpp  OwlIndividual.cpp  PluginOWLExporter.cpp
src/plugins/plugin_ros/: PluginROS.cpp
src/plugins/prediction/: DecisionTree.cpp  PluginPrediction.cpp
src/plugins/ros/: PluginROS.cpp
src/plugins/supervisor/: PluginSupervisor.cpp
src/plugins/symboliclog/: Node.cpp  PluginSymbolicLog.cpp
