<?xml version="1.0"?>

<package>
  
  <name>semrec</name>
  <version>0.7.3</version>
  <description>Semantic Hierarchy Recorder system allowing detailed execution time logging of autonomously performed robot plans on cognitive agents</description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <url type="website">https://www.github.com/code-iai/ros-semrec</url>
  <url type="website">http://www.cram-system.org/doc/logging/beliefstate</url>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>designator_integration_cpp</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>autoconf</build_depend>
  <build_depend>automake</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>libjson0-dev</build_depend>
  <build_depend>libconfig++-dev</build_depend>
  
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>designator_integration_cpp</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>autoconf</run_depend>
  <run_depend>automake</run_depend>
  <run_depend>libncurses-dev</run_depend>
  <run_depend>libjson0-dev</run_depend>
  <run_depend>libconfig++-dev</run_depend>

</package>
